Fixing layout issues on reviews

--- a/_includes/css/website.css
+++ b/_includes/css/website.css
@@ -132,7 +132,7 @@ li {
 }
 
 .stars {
-  padding: 10px;
+  padding: 10px 0px;
 }
 
 .screenshots img {
@@ -213,10 +213,9 @@ li {
 }
 
 .all_workouts{
-  padding: 40px 0px;
 }
 .all_workouts .workout {
-  padding: 20px 35px;
+  margin-top: 30px;
 }
 .workout p {
   margin-top: 10px;
@@ -240,11 +239,6 @@ li {
   max-width: 900px;
   text-align: center;
   margin: auto;
-}
-
-.large_subtitle {
-  font-size: 30px;
-  font-weight: bold;
 }
 
 .content_banner {
